--- a/Public/documentation.html
+++ b/Public/documentation.html
@@ -27,62 +27,157 @@
      <main>
        <p>Movie_API is the serverside component of a web application named myFlix.
   The web application will provide users with access to information about different movies,
-  directors, and genres. Users will be able to sign up, update their personal information,
-  and create a list of their favorite movies.
+  directors, and genres.
       </p>
       <div class="table">
-            <table>
-              <caption>Data Formats for HTTP Requests/Responses</caption>
-              <thead>
-                <tr>
-                  <th scope="col">Description</th>
-                  <th scope="col">Method</th>
-                  <th scope="col">Body of Request</th>
-                  <th scope="col">Body of Response</th>
-                </tr>
-              </thead>
-              <tbody>
+      <table>
+        <caption>Data Formats for HTTP Requests/Responses</caption>
+        <thead>
+          <tr>
+            <th scope="col">Description</th>
+            <th scope="col">Method</th>
+            <th scope="col">URL</th>
+            <th scope="col">Request Parameter</th>
+            <th scope="col">Body of Request</th>
+            <th scope="col">Body of Response</th>
+          </tr>
+        </thead>
+        <tbody>
           <tr>
             <td>Return a list of ALL movies to the user</td>
             <td>GET</td>
+            <td>/movies</td>
             <td>None</td>
-            <td>A JSON object holding data about all movies</td>
-          </tr>
-          <tr>
-            <td>Return data (description, genre, director, image URL, whether it’s featured or not) about a single movie by title to the user</td>
-            <td>GET</td>
             <td>None</td>
             <td>
-              A JSON object holding data about a single movie. Example:<br>
+              A JSON object holding data about all movies. Format:<br>
               {
-                "Description": "Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.",<br>
-                "Genre": " Drama",<br>
+                <span>Genre:</span> {<br>
+                <span>Name:</span> String,<br>
+                <span>Description:</span> String,<br>
+                },<br>
+                <span>Director:</span> {<br>
+                <span>Name:</span> String,<br>
+                <span>Bio:</span> String,<br>
+                <span>Birth:</span> Date,<br>
+                <span>Death:</span> Date<br>
+                },<br>
+                <span>Actors:</span> [],<br>
+                <span>_id:</span> 12-byte BSON type,<br>
+                <span>Title:</span>: String,<br>
+                <span>Description:</span> String,<br>
+                <span>ImagePath:</span> String,<br>
+                <span>Featured:</span> Boolean<br>
               }
             </td>
           </tr>
           <tr>
-            <td>Return data about a genre (description) by name/title</td>
+            <td>Return data (description, genre, director, image URL, whether it’s featured or not) about a single movie by title to the user</td>
             <td>GET</td>
+            <td>/movies/[Title]</td>
+            <td>/movies/:Title</td>
             <td>None</td>
-            <td>A JSON object holding data about a single genre</td>
+            <td>
+              A JSON object holding data about a single movie. Format:<br>
+              {
+                <span>Genre</span>: {<br>
+                  <span>Name</span>:<br>
+                  <span>Description</span>: String<br>
+                },<br>
+                <span>Director</span>: {<br>
+                  <span>Name</span>: String,<br>
+                  <span>Bio</span>: String,<br>
+                  <span>Birth</span>: Date<br>
+                },<br>
+                <span>Actors</span>: [String],<br>
+                <span>_id</span>: 12-byte BSON type,<br>
+                <span>Title</span>: String,<br>
+                <span>Description</span>: String,<br>
+                <span>ImagePath</span>: String,<br>
+                <span>Featured</span>: Boolean<br>
+              }
+            </td>
           </tr>
           <tr>
-            <td>Allow users to add a movie to their list of favorites (showing only a text that a movie has been added—more on this later)</td>
+            <td>Return data about a genre (description) by name/title (e.g., “Thriller”)</td>
+            <td>GET</td>
+            <td>/movies/genres/[Genre]</td>
+            <td>/movies/genres/:Genre</td>
+            <td>None</td>
+            <td>
+              A JSON object holding data about a single genre. Format:<br>
+              {<span>Name:</span> String,<br>
+              <span>Description:</span> String<br>
+              }<br>
+            </td>
+          </tr>
+          <tr>
+            <td>Return data about a director (bio, birth year, death year) by name</td>
+            <td>GET</td>
+            <td>/movies/director/[Name]</td>
+            <td>/movies/director/:Name</td>
+            <td>None</td>
+            <td>
+              A JSON object holding data about the director. Format:<br>
+              <span>Director</span>: {<br>
+                <span>Name</span>: String<br>
+                <span>Bio</span>: String<br>
+                <span>Birth</span>: Date,<br>
+                <span>Death</span>: Date<br>
+              }<br>
+            </td>
+          </tr>
+          <tr>
+            <td>Allow new users to register</td>
             <td>POST</td>
+            <td>/users</td>
+            <td>None</td>
+            <td>A JSON object holding data about the user to create. Format:<br>
+            {
+              <span>FavoriteMovies</span>: [12-byte BSON type],<br>
+              <span>_id</span>: 12-byte BSON type,<br>
+              <span>Username</span>: String,<br>
+              <span>Password</span>: String,<br>
+              <span>Email</span>: String,<br>
+              <span>Birth</span>: Date<br>
+            }</td>
+            <td>A JSON object holding data about the user that was added.</td>
+          </tr>
+          <tr>
+            <td>Allow users to update their user info (username)</td>
+            <td>PUT</td>
+            <td>/users/[Username]</td>
+            <td>/users/:Username</td>
+            <td>A JSON object holding (required) data about the user to update.</td>
+            <td>A JSON object holding data that was updated.</td>
+          </tr>
+          <tr>
+            <td>Allow users to add a movie to their list of favorites.</td>
+            <td>PATCH</td>
+            <td>/users/[Username]/Movies/[MovieID]</td>
+            <td>/users/:Username/Movies/:MovieID</td>
             <td>None</td>
             <td>A JSON object holding data about the user with movies on favorite list.</td>
           </tr>
           <tr>
-            <td>Allow users to remove a movie from their list of favorites (showing only a text that a movie has been removed—more on this later)</td>
+            <td>Allow users to remove a movie from their list of favorites.</td>
             <td>DELETE</td>
+            <td>/users/[Username]/Movies/[MovieID]</td>
+            <td>/users/:Username/Movies/:MovieID</td>
             <td>None</td>
             <td>A JSON object holding data about the updated favorite list.</td>
           </tr>
-
+          <tr>
+            <td>Allow existing users to deregister.</td>
+            <td>DELETE</td>
+            <td>/users/[Username]</td>
+            <td>/users/:Username</td>
+            <td>None</td>
+            <td>A text message indicating that the user was deleted</td>
+          </tr>
         </tbody>
       </table>
     </div>
-
     </main>
     <script type="module" src="main.js"></script>
   </body>
